--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@ layout: default
 {% assign all_creatures = site.creatures | sort: 'name' %}
 <div class="home">
   <h1 class="page-heading">All Creatures</h1>
-  <p id="creatureSearch">Search by name: <input type="search" id="jetsSearch"></p>
+  <p id="creatureSearch" class="search-bar">
+    <span class="fa fa-search icon"></span>
+    <input type="search" class="jetsSearch" id="jetsSearch" placeholder="Search by name">
+  </p>
   <p id="sortBy">Sort By: <a href="{{ site.baseurl }}/cr">CR</a> <a href="{{ site.baseurl }}/">name</a></p>
 
   <dl class="tag-list">
